feat: add validation endpoint for issuer
