# src/main/openapi/onecx-iam-kc-svc-v1.yaml
@@ -42,6 +42,31 @@ paths:
       application/json:
        schema:
         $ref: '#/components/schemas/ProblemDetailResponse'
+ /v1/validate:
+  post:
+   security:
+    - oauth2: [ ocx-ia:read ]
+   tags:
+    - AdminController
+   summary: check if issuer is part of this svc
+   operationId: validateIssuer
+   requestBody:
+    required: true
+    content:
+     "application/json":
+      schema:
+       type: string
+   responses:
+    200:
+     description: OK
+    404:
+     description: issuer not found
+    400:
+     description: Bad request
+     content:
+      application/json:
+       schema:
+        $ref: '#/components/schemas/ProblemDetailResponse'
 components:
  securitySchemes:
   oauth2:
